--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.17.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "node": "^20.5.1"
