--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "axios": "^1.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -17,6 +18,7 @@
     "express-openid-connect": "^2.17.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
-    "node": "^20.5.1"
+    "node": "^20.5.1",
+    "nodemailer": "^6.9.7"
   }
 }
