--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "cloudinary-react-native": "^0.1.3",
     "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
