--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,13 @@
     "@cloudinary/url-gen": "^1.12.0",
     "@emailjs/browser": "^3.11.0",
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "node": "^20.5.1",
