--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.12.0",
     "@emailjs/browser": "^3.11.0",
+    "argon2": "^0.31.2",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
