--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "argon2": "^0.31.2",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -25,6 +26,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "node": "^20.5.1",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "sendmail": "^1.6.1"
   }
 }
