ajout de mongodb en cours

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,11 @@
+# PORT=3000
+# DB_HOST=localhost
+# DB_USERNAME=root
+# DB_PASSWORD=Xetfirst93@
+# DB_NAME=foodball
+# FOOTBALL_API_KEY=c47d36a493d244d1a53b973337cf2820
+
 PORT=3000
-DB_HOST=localhost
-DB_USERNAME=root
-DB_PASSWORD=Xetfirst93@
-DB_NAME=foodball
+MONGODB_URI=mongodb+srv://terry:parOu3YCux5wXsJD@foodball-cluster.armrzuo.mongodb.net/?retryWrites=true&w=majority&appName=foodball-cluster
 FOOTBALL_API_KEY=c47d36a493d244d1a53b973337cf2820
+parOu3YCux5wXsJD
