--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,8 @@
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.6.0",
     "node": "^20.5.1",
     "nodemailer": "^6.9.7",
     "sendmail": "^1.6.1"
