--- a/backend/.env
+++ b/backend/.env
@@ -6,6 +6,6 @@
 # FOOTBALL_API_KEY=c47d36a493d244d1a53b973337cf2820
 
 PORT=3000
-MONGODB_URI=mongodb+srv://terry:parOu3YCux5wXsJD@foodball-cluster.armrzuo.mongodb.net/?retryWrites=true&w=majority&appName=foodball-cluster
+MONGODB_URI=mongodb+srv://terry:ybC7u3Fc0XZ7K4TP@foodball-cluster.armrzuo.mongodb.net/?retryWrites=true&w=majority&appName=foodball-cluster
+
 FOOTBALL_API_KEY=c47d36a493d244d1a53b973337cf2820
-parOu3YCux5wXsJD
