--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,9 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://terry:ybC7u3Fc0XZ7K4TP@foodball-cluster.armrzuo.mongodb.net/?retryWrites=true&w=majority&appName=foodball-cluster
 FOOTBALL_API_KEY=c47d36a493d244d1a53b973337cf2820
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=foodballofficiel@gmail.com
+EMAIL_PASS=iwdr smju ygfm lkpd
+FRONTEND_URL=http://localhost:5173
