--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.0",
@@ -31,7 +32,7 @@
     "mongoose": "^8.18.0",
     "mysql": "^2.18.1",
     "node": "^20.5.1",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^6.10.1",
     "sendmail": "^1.6.1"
   },
   "devDependencies": {
